fix map height on ios safari

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -3,6 +3,11 @@ body {
   #map {
     width: 100vw;
     height: 100vh;
+    @media (max-width: 767px) {
+      @supports(height: -webkit-fill-available) {
+        height: -webkit-fill-available;
+      }
+    }
   }
   .leaflet-control-locate-location-arrow{
     width: 30px;
